--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nodemailer": "^5.1.1"
+    "ejs": "^2.6.1",
+    "nodemailer": "^5.1.1",
+    "xoauth2": "^1.2.0"
   }
 }
